# agent-rewind

./: .env.example  .gitignore  LICENSE  Makefile  pyproject.toml
chaos/: README.md  __init__.py
dashboards/: agent-ops.json  replay-comparison.json
fixes/: hardened.txt  vulnerable.txt
rewind/: __init__.py  cli.py  conventions.py  diff.py  pricing.py  recorder.py  replay.py  trace_store.py
scripts/: generate_traffic.py  import_dashboards.py  incidents.py
scripts/fixtures/: queries.json
support_agent/: __init__.py  agent.py  db.py  llm.py  shipping_service.py  tools.py
support_agent/kb/: account.md  refunds.md  returns.md  shipping.md
tests/: test_reconstruction.py  test_toolmocker.py
tests/fixtures/: trace_api.json
