[project]
name = "agent-rewind"
version = "0.1.0"
description = "Flight Recorder & Replay for AI agents — regression testing for agents using real incidents as test cases."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.9",
    "python-dotenv>=1.0",
    "clickhouse-connect>=0.8",
]

[project.scripts]
rewind = "rewind.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rewind", "support_agent", "chaos"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
